--- a/doc/man1/eggdrop.1
+++ b/doc/man1/eggdrop.1
@@ -1,6 +1,6 @@
 .\" Originally by Robey, redone by rtc
 .\" * 1999-11-08 rtc       A line wasn't displayed
-.\" * 2000-10-07 Fabian    Updated and slightly re-organised.
+.\" * 2000-10-07 Fabian    Updated and slightly re-organized.
 .TH EGGDROP 1 "October 2000" "EGGDEV" "IRC goodies"
 .SH NAME
 eggdrop \- an IRC robot program
