--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.209 2001/11/05 04:08:26 guppy Exp $
+$Id: UPDATES1.6,v 1.210 2001/11/07 05:12:01 guppy Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.7
 Found by  Fixed by  What...
+          BarkerJr  more typo fixes
           Wcc       fixed several tons of spelling errors (really)
 guppy     stdarg    tcl_chattr now lets you remove global flags
 various   stdarg    fixed some issues with utf8 dealing with how we handle tcl
