--- a/doc/man1/eggdrop.1
+++ b/doc/man1/eggdrop.1
@@ -21,9 +21,9 @@ By itself,
 does nothing.  It needs a config file (usually named after your bot)
 to tell it how to behave.  The
 config file is actually a script written in
-.I "enhanced TCL"
-(TCL with extra commands and variables defined by eggdrop).  A sample
-TCL config file with describing comments for each option,
+.I "enhanced Tcl"
+(Tcl with extra commands and variables defined by eggdrop).  A sample
+Tcl config file with describing comments for each option,
 .IR eggdrop.conf.dist ,
 is given with the distribution.
 .SH OPTIONS
@@ -109,13 +109,13 @@ sample configuration file, containing
 in eggdrop.
 .TP
 .I scripts/weed
-TCL script to sort eggdrop userfiles
+Tcl script to sort eggdrop userfiles
 .TP
 .I scripts/botchk
 shell script suitable for crontab job
 .TP
 .I scripts/*.tcl
-some example TCL-eggdrop scripts
+some example Tcl-eggdrop scripts
 .SH "SEE ALSO"
 irc(1),
 ircII(1),
