--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,11 +1,11 @@
-$Id: UPDATES1.6,v 1.213 2001/11/11 03:07:50 poptix Exp $
+$Id: UPDATES1.6,v 1.214 2001/11/11 20:43:12 poptix Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.7
 Found by  Fixed by  What...
-	  poptix    Testing some better socket code ++
+	  poptix    Testing some better socket code (++)++
           Wcc       more typo fixing in the config files
           BarkerJr  more typo fixes
           Wcc       fixed several tons of spelling errors (really)
