lets fix stopnethack-mode 4

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,12 @@
-$Id: UPDATES1.6,v 1.214 2001/11/11 20:43:12 poptix Exp $
+$Id: UPDATES1.6,v 1.215 2001/11/13 22:51:49 guppy Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.7
 Found by  Fixed by  What...
+boro      bhab      stop_nethack_mode 4 oddity with bot +a returns after a
+                    split getting a -o+o (double negating mode)
 	  poptix    Testing some better socket code (++)++
           Wcc       more typo fixing in the config files
           BarkerJr  more typo fixes
