--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.215 2001/11/13 22:51:49 guppy Exp $
+$Id: UPDATES1.6,v 1.216 2001/11/13 22:55:20 guppy Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.7
 Found by  Fixed by  What...
+          TaKeDa    fix 'setuser <hand> PASS' from crashing
 boro      bhab      stop_nethack_mode 4 oddity with bot +a returns after a
                     split getting a -o+o (double negating mode)
 	  poptix    Testing some better socket code (++)++
