applied stdarg's small notes.mod patch -- this is good ... we are finding a ton of bugs before 1.6.7 would have been released <g> I'm also wondering if 1.6.7 will ever be released hehe, if anyone is able to test the CPU bug PLEASE do so, it will be of great benefit to us.

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,12 +1,13 @@
-$Id: UPDATES1.6,v 1.216 2001/11/13 22:55:20 guppy Exp $
+$Id: UPDATES1.6,v 1.217 2001/11/14 16:25:48 guppy Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.7
 Found by  Fixed by  What...
+TaKeDa    stdarg    fixed a small crash in notes.mod
           TaKeDa    fix 'setuser <hand> PASS' from crashing
-boro      bhab      stop_nethack_mode 4 oddity with bot +a returns after a
+boro      bhab      stop_nethack_mode 4 oddity when a +a bot returns from a
                     split getting a -o+o (double negating mode)
 	  poptix    Testing some better socket code (++)++
           Wcc       more typo fixing in the config files
