updated autobotchk to v1.09.1 -- makes it nicer to run out of the scripts directory and an improved how to section ... also, the getops version fix was added and the output from when userinfo.tcl is loaded was shortened.

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.217 2001/11/14 16:25:48 guppy Exp $
+$Id: UPDATES1.6,v 1.218 2001/11/15 06:28:35 guppy Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.7
 Found by  Fixed by  What...
+          guppy     minor changes to autobotchk (v1.09.1)
 TaKeDa    stdarg    fixed a small crash in notes.mod
           TaKeDa    fix 'setuser <hand> PASS' from crashing
 boro      bhab      stop_nethack_mode 4 oddity when a +a bot returns from a
