--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.219 2001/11/15 14:11:02 poptix Exp $
+$Id: UPDATES1.6,v 1.220 2001/11/16 04:48:43 guppy Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.7
 Found by  Fixed by  What...
+          guppy     removed some leftovers in uptime.mod
 blaster^  poptix    yet ANOTHER stupid bug. (crash in .-chan)
           guppy     minor changes to autobotchk (v1.09.1)
 TaKeDa    stdarg    fixed a small crash in notes.mod
