--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.221 2001/11/16 05:01:32 guppy Exp $
+$Id: UPDATES1.6,v 1.222 2001/11/21 00:07:43 guppy Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.7
 Found by  Fixed by  What...
+          TaKaDa    fixed tcl_botattr
 various   stdarg    fixed a bogus memory leak
           guppy     removed some leftovers in uptime.mod
 blaster^  poptix    yet ANOTHER stupid bug. (crash in .-chan)
