--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.222 2001/11/21 00:07:43 guppy Exp $
+$Id: UPDATES1.6,v 1.223 2001/11/28 23:10:38 guppy Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.7
 Found by  Fixed by  What...
+          Lam       fixed +a for !channels
           TaKaDa    fixed tcl_botattr
 various   stdarg    fixed a bogus memory leak
           guppy     removed some leftovers in uptime.mod
