applied Eule's sotpnethack patch and wcc's doc patch

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,12 @@
-$Id: UPDATES1.6,v 1.224 2001/11/28 23:17:41 guppy Exp $
+$Id: UPDATES1.6,v 1.225 2001/11/28 23:26:05 guppy Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.7
 Found by  Fixed by  What...
+          Wcc       some more doc changes
+          Eule      actually fixed stopnethack and a wasop bug
 various   Wcc       added support for dalnet's +M chanmode
           Lam       fixed +a for !channels
           TaKaDa    fixed tcl_botattr
