--- a/INSTALL
+++ b/INSTALL
@@ -44,7 +44,7 @@ experienced users.
 
      make install
      This will install the eggdrop in your home directory in a directory
-     called eggdrop (i.e.. /home/user/eggdrop).
+     called eggdrop (i.e. /home/user/eggdrop).
 
      If you want to install to a different directory use:
 
