Hanno's patch to fix testip

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.225 2001/11/28 23:26:05 guppy Exp $
+$Id: UPDATES1.6,v 1.226 2001/11/28 23:51:16 guppy Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.7
 Found by  Fixed by  What...
+          Hanno     fixed testip in alltools.tcl
           Wcc       some more doc changes
           Eule      actually fixed stopnethack and a wasop bug
 various   Wcc       added support for dalnet's +M chanmode
