--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.226 2001/11/28 23:51:16 guppy Exp $
+$Id: UPDATES1.6,v 1.227 2001/11/29 02:53:32 guppy Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.7
 Found by  Fixed by  What...
+          Wcc       cmd_optimise is now cmd_optimize
           Hanno     fixed testip in alltools.tcl
           Wcc       some more doc changes
           Eule      actually fixed stopnethack and a wasop bug
