applied my banproblems patch -- its even tested, hopefully some others can test this and see if it fixes their problems as well

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.227 2001/11/29 02:53:32 guppy Exp $
+$Id: UPDATES1.6,v 1.228 2001/11/29 05:48:37 guppy Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.7
 Found by  Fixed by  What...
+various   guppy     tcl_newban and tcl_newchanban didn't always add the bans
           Wcc       cmd_optimise is now cmd_optimize
           Hanno     fixed testip in alltools.tcl
           Wcc       some more doc changes
