--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.230 2001/11/30 01:34:24 guppy Exp $
+$Id: UPDATES1.6,v 1.231 2001/11/30 21:16:00 poptix Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.7
 Found by  Fixed by  What...
+          poptix    rebound some commands to proper bindings (relay, bottree, vbottree)
           ITE       made our build system work with newer autoconf versions
           guppy     make the default bot a bit more secure in regards to
                     the ability to execute tcl commands from the partyline
