got rid of some language which didn't really fully describe what the problem was

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.231 2001/11/30 21:16:00 poptix Exp $
+$Id: UPDATES1.6,v 1.232 2001/12/01 04:31:29 guppy Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.7
 Found by  Fixed by  What...
+ClubCX    guppy     got rid of bad language
           poptix    rebound some commands to proper bindings (relay, bottree, vbottree)
           ITE       made our build system work with newer autoconf versions
           guppy     make the default bot a bit more secure in regards to
