--- a/language/core.english.lang
+++ b/language/core.english.lang
@@ -1,7 +1,7 @@
 # core.english.lang
 #   core language messages for eggdrop
 #
-# $Id: core.english.lang,v 1.26 2001/11/05 04:08:27 guppy Exp $
+# $Id: core.english.lang,v 1.27 2001/12/01 04:31:29 guppy Exp $
 
 # General stuff
 0x001,Usage
@@ -197,7 +197,7 @@ Telnet to the bot and enter 'NEW' as your nickname.
 0x639,Nickname has been juped
 0x63a,Channel %s is juped. :(
 0x63b,%s says I'm not registered, trying next one.
-0x63c,You have a fucked up server.
+0x63c,The server says we are not registered yet..
 0x63d,Flood from @%s!  Placing on ignore!
 0x63f,JOIN flood from @%s!  Banning.
 0x640,Channel flood from %s -- kicking
