--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.232 2001/12/01 04:31:29 guppy Exp $
+$Id: UPDATES1.6,v 1.233 2001/12/02 07:11:15 guppy Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.7
 Found by  Fixed by  What...
+          nakee     added language support to transfer.mod
 ClubCX    guppy     got rid of bad language
           poptix    rebound some commands to proper bindings (relay, bottree, vbottree)
           ITE       made our build system work with newer autoconf versions
