added the patch for %n support to the motd stuff ... its getting late, dont expect my changelogs to be masterpieces hehe

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.233 2001/12/02 07:11:15 guppy Exp $
+$Id: UPDATES1.6,v 1.234 2001/12/02 07:17:24 guppy Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.7
 Found by  Fixed by  What...
+          Noyga     added %n for $network to the list of motd text substitutions
           nakee     added language support to transfer.mod
 ClubCX    guppy     got rid of bad language
           poptix    rebound some commands to proper bindings (relay, bottree, vbottree)
