--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.234 2001/12/02 07:17:24 guppy Exp $
+$Id: UPDATES1.6,v 1.235 2001/12/02 21:43:28 guppy Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.7
 Found by  Fixed by  What...
+          Noyga     added French language files for: assoc, console, notes
           Noyga     added %n for $network to the list of motd text substitutions
           nakee     added language support to transfer.mod
 ClubCX    guppy     got rid of bad language
