silly guppy .. adding stuff wrong

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.235 2001/12/02 21:43:28 guppy Exp $
+$Id: UPDATES1.6,v 1.236 2001/12/03 02:31:03 guppy Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.7
 Found by  Fixed by  What...
+S7reaM    guppy     tcl_newban had some silly guppy logic which caused a crash
           Noyga     added French language files for: assoc, console, notes
           Noyga     added %n for $network to the list of motd text substitutions
           nakee     added language support to transfer.mod
