--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.238 2001/12/04 20:12:55 guppy Exp $
+$Id: UPDATES1.6,v 1.239 2001/12/05 04:12:06 guppy Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.7
 Found by  Fixed by  What...
+Wcc       guppy     fixed a mixed up transfer language entry that caused a crash
 various   nakee     added '--disable-cc-optimization' to disable -O2 flags
 Abraham   Eule      added a missing channel membercheck in a few commands
 S7reaM    guppy     tcl_newban had some silly guppy logic which caused a crash
