--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.240 2001/12/06 04:52:18 guppy Exp $
+$Id: UPDATES1.6,v 1.241 2001/12/06 04:57:17 guppy Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.7
 Found by  Fixed by  What...
+          guppy     don't show status_log if we don't have a server
 Wcc       ITE       lets make eggdrop work on cygwin again
 Wcc       guppy     fixed a mixed up transfer language entry that caused a crash
 various   nakee     added '--disable-cc-optimization' to disable -O2 flags
