--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,9 +1,12 @@
-$Id: UPDATES1.6,v 1.241 2001/12/06 04:57:17 guppy Exp $
+$Id: UPDATES1.6,v 1.242 2001/12/07 20:14:45 guppy Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
-1.6.7
+1.6.8
+Found by  Fixed by  What...
+
+1.6.7 (7 December 2001)
 Found by  Fixed by  What...
           guppy     don't show status_log if we don't have a server
 Wcc       ITE       lets make eggdrop work on cygwin again
