--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.243 2001/12/08 18:16:03 guppy Exp $
+$Id: UPDATES1.6,v 1.244 2001/12/14 05:30:04 guppy Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.8
 Found by  Fixed by  What...
+various   stdarg    small fix to the notes module
           BarkerJr  updated the uptime url
 
 1.6.7 (7 December 2001)
