added Wcc's whois_ports patch

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,12 @@
-$Id: UPDATES1.6,v 1.244 2001/12/14 05:30:04 guppy Exp $
+$Id: UPDATES1.6,v 1.245 2001/12/14 05:32:11 guppy Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.8
 Found by  Fixed by  What...
+          Wcc       show the user port as users instead of telnet and the bot port
+                    as a bot port instead of a relay port
 various   stdarg    small fix to the notes module
           BarkerJr  updated the uptime url
 
