--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.246 2001/12/14 05:38:12 guppy Exp $
+$Id: UPDATES1.6,v 1.247 2001/12/14 05:43:10 guppy Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.8
 Found by  Fixed by  What...
+          Wcc       major cleanup of config files and related documents
           BarkerJr  updated doc/MODULES a bit
           Wcc       show the user port as users instead of telnet and the bot port
                     as a bot port instead of a relay port
