added BarkerJr's patch, also please do not use C++ comments in your patches

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.248 2001/12/14 18:48:23 guppy Exp $
+$Id: UPDATES1.6,v 1.249 2001/12/16 14:40:17 guppy Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.8
 Found by  Fixed by  What...
+          BarkerJr  only show fake alerts once every 10 seconds to prevent flooding
 DFrank    guppy     small make install bug related to doc cleanups
           Wcc       major cleanup of config files and related documents
           BarkerJr  updated doc/MODULES a bit
