applied Eule's membercheck 2 & 3 patches

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,12 @@
-$Id: UPDATES1.6,v 1.249 2001/12/16 14:40:17 guppy Exp $
+$Id: UPDATES1.6,v 1.250 2001/12/16 14:55:59 guppy Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.8
 Found by  Fixed by  What...
+          Eule      more membercheck fixes for nick bans, nick +k users, -user, and
+                    -host.
           BarkerJr  only show fake alerts once every 10 seconds to prevent flooding
 DFrank    guppy     small make install bug related to doc cleanups
           Wcc       major cleanup of config files and related documents
