sped up hand2nick a ton (people using it alot on big userlists should notice the difference greatly)

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.250 2001/12/16 14:55:59 guppy Exp $
+$Id: UPDATES1.6,v 1.251 2001/12/18 16:40:57 guppy Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.8
 Found by  Fixed by  What...
+|^Raven^| guppy     made tcl_hand2nick _a lot_ faster
           Eule      more membercheck fixes for nick bans, nick +k users, -user, and
                     -host.
           BarkerJr  only show fake alerts once every 10 seconds to prevent flooding
