--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.252 2001/12/18 17:19:25 guppy Exp $
+$Id: UPDATES1.6,v 1.253 2001/12/18 17:21:34 guppy Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.8
 Found by  Fixed by  What...
+          Wcc       yet more documentation updates
 ziffie    BHAB      Documentation doesn't cover how to connect to servers with 
                     a password; documentation added to sample config files.
 |^Raven^| guppy     made tcl_hand2nick _a lot_ faster
