added a found by for Wcc's whois_ports patch

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,4 +1,4 @@
-$Id: UPDATES1.6,v 1.253 2001/12/18 17:21:34 guppy Exp $
+$Id: UPDATES1.6,v 1.254 2001/12/19 02:59:08 guppy Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
@@ -15,7 +15,7 @@ ziffie    BHAB      Documentation doesn't cover how to connect to servers with
 DFrank    guppy     small make install bug related to doc cleanups
           Wcc       major cleanup of config files and related documents
           BarkerJr  updated doc/MODULES a bit
-          Wcc       show the user port as users instead of telnet and the bot port
+RandomAPB Wcc       show the user port as users instead of telnet and the bot port
                     as a bot port instead of a relay port
 various   stdarg    small fix to the notes module
           BarkerJr  updated the uptime url
