added Eule's small-fixes patch

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,12 @@
-$Id: UPDATES1.6,v 1.254 2001/12/19 02:59:08 guppy Exp $
+$Id: UPDATES1.6,v 1.255 2001/12/19 04:57:54 guppy Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.8
 Found by  Fixed by  What...
+          Eule      a bunch of small fixes to gotjoin, gotkick, got367, a
+                    modes-per-line calcuation, and to include_lk
           Wcc       yet more documentation updates
 ziffie    BHAB      Documentation doesn't cover how to connect to servers with 
                     a password; documentation added to sample config files.
