--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,13 @@
-$Id: UPDATES1.6,v 1.255 2001/12/19 04:57:54 guppy Exp $
+$Id: UPDATES1.6,v 1.256 2001/12/19 06:29:21 guppy Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.8
 Found by  Fixed by  What...
+various   guppy     tcl_pushmode now accepts any irc modes instead of the standard ones
+          guppy     made tcl_chanlist (when matching chanflags), tcl_handonchan, and
+                    tcl_nick2hand much faster
           Eule      a bunch of small fixes to gotjoin, gotkick, got367, a
                     modes-per-line calcuation, and to include_lk
           Wcc       yet more documentation updates
