added my jumpfix patch

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.256 2001/12/19 06:29:21 guppy Exp $
+$Id: UPDATES1.6,v 1.257 2001/12/19 07:30:58 guppy Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.8
 Found by  Fixed by  What...
+          guppy     tcl_jump could easily crash the bot
 various   guppy     tcl_pushmode now accepts any irc modes instead of the standard ones
           guppy     made tcl_chanlist (when matching chanflags), tcl_handonchan, and
                     tcl_nick2hand much faster
